apigateway/apigateway-helm/templates/ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: apigateway
    namespace: default
  spec:
    rules:
      - host: apigateway.vehicle-daashboard.alten.se
        http:
          paths:
            - backend:
                serviceName: apigateway
                servicePort: 8081
              path: /apigateway
